--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ﻿title:            Joey.W
 description:      别人笑我太疯癫, 我笑他人看不穿。不见五陵豪杰墓, 无花无酒锄作田。
 logo:             site-logo.png
-disqus_shortname: Joway
+disqus_shortname: Joey.W
 search:           true
 # Change url to your domain. Leave localhost server or blank when working locally.
 url:              http://joeywen.github.io/lovesheryl/
@@ -22,7 +22,7 @@ owner:
   flickr:         
   tumblr:         
   weibo:          
-  # For Google Authorship https://plus.google.com/joway
+  # For Google Authorship 
   google_plus:    
 
 # Analytics and webmaster tools stuff goes here
